--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "PORTFOLIO-USING-REACT-MAIN",
+  "name": "portfolio-using-react-main",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -12,6 +12,7 @@
   "dependencies": {
     "@fontsource/outfit": "^5.0.8",
     "@fontsource/roboto": "^5.0.8",
+    "clipboard": "^2.0.11",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
