--- a/src/data/projects.json
+++ b/src/data/projects.json
@@ -2,8 +2,8 @@
   {
     "title": "Task-Mager",
     "imageSrc": "projects/taskmanager.png",
-    "description": "App to Maintain the TO-DO list add and Inset can be done, project Is build by using Advanced REACT REdUX",
-    "skills": ["React JS","Node JS","Relational DB","TailwindCSS"],
+    "description": "App to Maintain the Tasks with status,count,edit,delete",
+    "skills": ["React JS","Node JS","Relational DB","TailwindCSS","RESTFULL API],
     "demo": "https://todoapp-omega-amber.vercel.app/",
     "source": "https://github.com/YU-Pooja/Task-Manage"
   },
