--- a/src/data/projects.json
+++ b/src/data/projects.json
@@ -4,7 +4,7 @@
     "imageSrc": "projects/taskmanager.png",
     "description": "App to Maintain the Tasks with status,count,edit,delete",
     "skills": ["React JS","Node JS","Relational DB","TailwindCSS","RESTFULL API],
-    "demo": "https://todoapp-omega-amber.vercel.app/",
+    "demo": "https://task-manager/",
     "source": "https://github.com/YU-Pooja/Task-Manage"
   },
   {
