--- a/src/data/projects.json
+++ b/src/data/projects.json
@@ -2,8 +2,8 @@
   {
     "title": "Task-Mager",
     "imageSrc": "projects/taskmanager.png",
-    "description": "App to Maintain the Tasks with status,count,edit,delete",
-    "skills": ["React JS","Node JS","Relational DB","TailwindCSS","RESTFULL API"],
+    "description": "App to Maintain the Tasks status,create,count,edit, delete",
+    "skills": ["React JS","Node JS","Relational DB","TailwindCSS","RESTAPI"],
     "demo": "https://task-manager/",
     "source": "https://github.com/YU-Pooja/Task-Manage"
   },
